# otc-zuul-jobs

./: .ansible-lint  .gitignore  README.md  bindep.txt  go.mod  linters-requirements.txt  setup.cfg  test-constraints.txt  test-requirements.txt  tox.ini
.rules/: ZuulJobsNamespaceLoopVar.py  ZuulJobsNoSameOwner.py
doc/source/: ansible-collection-jobs.rst  ansible-roles.rst  conf.py  container-jobs.rst  container-roles.rst  go-jobs.rst  (+9 more)
test-playbooks/: create-vault-approle-secret.yaml  create-vault-approle-token.yaml  destroy-vault-token.yaml  ensure-ansible.yaml  ensure-antsibull.yaml  ensure-gh.yaml  ensure-pandoc.yaml  ensure-sphinx-opensearch.yaml  ensure-syft.yaml  ensure-vault.yaml  library  propose.yaml  upload-artifact.yaml  upload-doc-index-opensearch.yaml  upload-logs.yaml
tests/: __init__.py
tools/: ruamellib.py  update-test-platforms.py
zuul-tests.d/: ansible-collection-jobs.yaml  ansible-lint-rules.yaml  ansible-roles-jobs.yaml  container-jobs.yaml  dockerized-jobs.yaml  docs-jobs.yaml  docs-roles.yaml  gh-jobs.yaml  go-jobs.yaml  jobs.yaml  logs-jobs.yaml  magic-jobs.yaml  misc-roles.yaml  propose-jobs.yaml  rancher-jobs.yaml  refstack-jobs.yaml  sbom-roles.yaml  upload-artifact-job.yaml  vault-roles-jobs.yaml
zuul.d/: ansible-collection-jobs.yaml  container-jobs.yaml  doc-jobs.yaml  dockerized-jobs.yaml  gitcontrol-jobs.yaml  go-jobs.yaml  jobs.yaml  magic-jobs.yaml  project-templates.yaml  project.yaml  projects.yaml  propose-jobs.yaml  python-jobs.yaml  rancher-jobs.yaml  refstack-jobs.yaml  rust-jobs.yaml  secrets.yaml  terraform-jobs.yaml
(+298 files in other folders)
