[metadata]
name = otc-zuul-jobs
summary = A standard library of Zuul jobs and Ansible Roles
description-file =
    README.rst
author = Opentelekomcloud Team
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build
